loco-gen/src/snapshots/loco_gen__template_engine__tests__can_render_form_field_[form_bool!_bool!].snap
---
source: loco-gen/src/template_engine.rs
expression: "format!(\"Crete form\\n\\r{create_form}\\n\\rEdit Form\\n\\r{edit_form}\")"
---
Crete form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">bool!</label>
    <input class="flex rounded-md border border-input bg-transparent text-base shadow-sm md:text-sm" id="bool!" name="bool!" type="checkbox" value="true"  required />
</div>
Edit Form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">bool!</label>
    <input class="flex rounded-md border border-input bg-transparent text-base shadow-sm md:text-sm" id="bool!" name="bool!" type="checkbox" value="true" {% if item.bool! %}checked{%endif %} required />
</div>
