loco-gen/src/snapshots/loco_gen__template_engine__tests__can_render_form_field_[form_decimal!_decimal!].snap
---
source: loco-gen/src/template_engine.rs
expression: "format!(\"Crete form\\n\\r{create_form}\\n\\rEdit Form\\n\\r{edit_form}\")"
---
Crete form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">decimal!</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-79228162514264337593543950335" max="79228162514264337593543950335" id="decimal!" name="decimal!" type="number" value="" required step="0.1" />
</div>
Edit Form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">decimal!</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-79228162514264337593543950335" max="79228162514264337593543950335" id="decimal!" name="decimal!" type="number" value="{{item.decimal!}}" required step="0.1" />
</div>
